@@ -1,4 +1,5 @@
-* SocialNetworkProfile proxy model added.
+* SocialNetworkPage proxy model added for V2.
+* SocialNetworkProfile proxy model added for V2.
 
 === 0.5.10 2014-06-25
 
